2015-06-24  Kaz Kylheku  <kaz@kylheku.com>

	Refactoring n-ary functions to use a single helper.

	* lib.c (nary_op): New function.
	(plusv, mulv, logandv, logiorv): Use nary_op.

	* lib.h (nary_op): Declared.

2015-06-23  Kaz Kylheku  <kaz@kylheku.com>

	Hash subset testing.

	* eval.c (eval_init): Register hash-subset and hash-proper-subset
	intrinsics.

	* hash.c (hash_subset, hash_proper_subset): New functions.

	* hash.h (hash_subset, hash_proper_subset): Declared.

	* txr.1: New functions documented.

2015-06-22  Kaz Kylheku  <kaz@kylheku.com>

	* genvim.txr: Add ifa.tl library file.

	* tl.vim, txr.vim: Regenerated.

2015-06-22  Kaz Kylheku  <kaz@kylheku.com>

	* share/txr/stdlib/place.tl: Get rid of big progn around the
	whole module.

	* genvim.txr: Handle (def's not preceded by spaces.

2015-06-21  Kaz Kylheku  <kaz@kylheku.com>

	Version 109.

	* RELNOTES: Updated.

	* configure, txr.1: Bumped version and date.

	* share/txr/stdlib/ver.tl: Likewise.

	* tl.vim, txr.vim: Regenerated.

2015-06-21  Kaz Kylheku  <kaz@kylheku.com>

	* lisplib.c (ifa_set_entries): Add conda.

	* share/txr/stdlib/ifa.tl (conda): New macro.

	* tests/012/ifa.tl: Adding test for conda.

	* txr.1: Documenting conda.

2015-06-20  Kaz Kylheku  <kaz@kylheku.com>

	Version 109.

	* RELNOTES: Updated.

	* configure, txr.1: Bumped version and date.

	* share/txr/stdlib/ver.tl: Likewise.

	* tl.vim, txr.vim: Regenerated.

2015-06-20  Kaz Kylheku  <kaz@kylheku.com>

	* genman.txr: Rewrite the man2html-generated inner name links with hash
	values derived from the title text, so that when sections are inserted
	or deleted, the URL's remain stable. The PREAMBLE is gone, and
	VERSION is collected when processsing the body.

2015-06-20  Kaz Kylheku  <kaz@kylheku.com>

	* genman.txr (month-name): Filter removed.
	Page date is converted to a time value, and later formatted.

2015-06-20  Kaz Kylheku  <kaz@kylheku.com>

	Remove places.h generation hack.
