@@ -48,6 +48,8 @@ val hash_eql(val obj);
 val hash_equal(val obj);
 val hashv(val args);
 val hash_construct(val hashv_args, val pairs);
+val hash_from_pairs(val pairs, val hashv_args);
+val hash_list(val keys, val hashv_args);
 val group_by(val func, val seq, val hashv_args);
 val hash_keys(val hash);
 val hash_values(val hash);
